# smplscript-c-plus-plus

./: README.md
smplscript-c++/: CMakeLists.txt
smplscript-c++/src/executable/: CMakeLists.txt  main.cpp
